@@ -1,5 +1,7 @@
 *SVN*
 
+* Rollback #new_record? and #id values for created records that rollback in an after_save callback. Closes #6910 [Ben Curren]
+
 * Pushing a record on an association collection doesn't unnecessarily load all the associated records.  [Obie Fernandez, Jeremy Kemper]
 
 * Oracle: fix connection reset failure.  #6846 [leonlleslie]
